--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -1,5 +1,9 @@
 @import-normalize;
 @import './font.css';
+@import './layout.css';
+@import './register.css';
+@import './header.css';
+@import './home.css';
 
 *, *::before, *::after{
     font-family: Gotham Rounded, sans-serif;
@@ -8,6 +12,7 @@
 body{
     padding: 0;
     margin: 0;
+    background-color: #fafafa;
 }
 html{
     font-size: 15px;
