profile card created --left fetching original data

--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -6,6 +6,8 @@
 @import './header.css';
 @import './home.css';
 @import './card.css';
+@import 'profile.css';
+@import 'postshow.css';
 
 *, *::before, *::after{
     font-family: Gotham Rounded, sans-serif;
