--- a/frontend/src/css/register.css
+++ b/frontend/src/css/register.css
@@ -15,6 +15,11 @@
     background-color: rgba(62, 121, 251, 0.8);
     padding: 10px;
 }
+.register_form > textarea{
+    resize: none;
+    height: fit-content;
+    width: 100%;
+}
 .register_form > h3 {
     align-self: center;
     color: pink;
