--- a/frontend/src/css/uploadImage.css
+++ b/frontend/src/css/uploadImage.css
@@ -1,3 +1,12 @@
+.progress_bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: pink;
+  height: 3px;
+  border-radius: 5px;
+}
+
 .input-wrapper {
   height: 30px;
   width: 30px;
@@ -5,21 +14,20 @@
   border-radius: 50%;
   position: relative;
   cursor: pointer;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
   font-weight: bold;
   font-size: 24px;
 }
 .input-wrapper > input {
-    height: 30px;
-    width: 30px;
-    overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    background-color: white;
-    background-color: pink;
+  height: 30px;
+  width: 30px;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+ 
+  /* background-color: pink; */
   border-radius: 50%;
   z-index: 100;
   position: relative;
   opacity: 0;
 }
-
